[project]
name = "spinetoolbox"
dynamic = ["version"]
authors = [{name = "Spine Project consortium", email = "spine_info@vtt.fi"}]
license = {text = "LGPL-3.0-or-later"}
description = "An application to define, manage, and execute various energy system simulation models"
keywords = ["energy system modelling", "workflow", "optimisation", "database"]
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8.1, <3.12"
dependencies = [
    "pyside6 >= 6.5.0, != 6.5.3, != 6.6.3",
    "jupyter-client >=6.0",
    "qtconsole >=5.1",
    "sqlalchemy >=1.3",
    "spinedb_api>=0.30.0",
    "spine_engine>=0.23.0",
    "numpy >=1.20.2",
    "matplotlib >= 3.5",
    "scipy >=1.7.1",
    "networkx >=2.6",
    "pandas >=1.3.2",
    "pygments >=2.8",
    "jill >=0.9.2",
    "pyzmq >=21.0",
    "spine-items>=0.21.0",
]

[project.urls]
Documentation = "https://spine-toolbox.readthedocs.io/"
Repository = "https://github.com/spine-tools/Spine-Toolbox"

[project.scripts]
spinetoolbox = "spinetoolbox.main:main"
spine-db-editor = "spinetoolbox.spine_db_editor.main:main"

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "spinetoolbox/_version.py"
# default: guess-next-dev, alternatives: post-release, no-guess-dev
version_scheme = "release-branch-semver"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "bin*",
    "docs*",
    "example*",
    "execution_tests*",
    "fig*",
    "tests*",
    "tool_specifications*"
]

[tool.coverage.run]
source = ["spinetoolbox"]
branch = true

[tool.coverage.report]
ignore_errors = true

[tool.black]
line-length = 120
exclude = '\.git|ui|resources_icons_rc.py|resources_logos_rc.py'
