######################################################################################################################
# Copyright (C) 2021 Spine project consortium
# This file is part of Spine Toolbox.
# Spine Toolbox is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General
# Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option)
# any later version. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General
# Public License for more details. You should have received a copy of the GNU Lesser General Public License along with
# this program. If not, see <http://www.gnu.org/licenses/>.
######################################################################################################################

[metadata]
name = spinetoolbox
version = attr: spinetoolbox.version.__version__
author = Spine Project consortium
author_email = spine_info@vtt.fi
license = LGPL-3.0-or-later
description = An application to define, manage, and execute various energy system simulation models
keywords =
url = https://github.com/Spine-project/Spine-Toolbox
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    pyside2 >=5.14, <5.15
    datapackage >= 1.15.2
    jupyter-client >= 6.1.12
    qtconsole >= 5.0.3
    sqlalchemy >=1.3, <1.4
    spinedb_api >= 0.12.2
    spine_engine >= 0.10.1
    numpy >= 1.20.2
    matplotlib!=3.2.1, >3.0, <3.3.1
    scipy >= 1.6.3
    networkx >= 2.5.1
    cx-Oracle >= 8.1.0
    pandas >= 1.2.4
    pymysql >= 1.0.2
    pyodbc >= 4.0.30
    psycopg2 >= 2.8.6
    jill >= 0.9.2
    spine-items >=0.7.6
include_package_data = True
python_requires = >=3.6, <3.9

[options.entry_points]
console_scripts =
    spinetoolbox=spinetoolbox.main:main
    spine-db-editor=spinetoolbox.spine_db_editor.main:main

[options.packages.find]
exclude =
    tests*
    execution_tests*
