######################################################################################################################
# Copyright (C) 2021 Spine project consortium
# This file is part of Spine Toolbox.
# Spine Toolbox is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General
# Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option)
# any later version. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General
# Public License for more details. You should have received a copy of the GNU Lesser General Public License along with
# this program. If not, see <http://www.gnu.org/licenses/>.
######################################################################################################################

[metadata]
name = spinetoolbox
version = attr: spinetoolbox.version.__version__
author = Spine Project consortium
author_email = spine_info@vtt.fi
license = LGPL-3.0-or-later
description = An application to define, manage, and execute various energy system simulation models
keywords =
url = https://github.com/Spine-project/Spine-Toolbox
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    pyside2 >= 5.15
    psutil < 5.9.2  # As of 2022-09-05 psutil 5.9.2 requires extra Microsoft Visual Build Tools installation
    jupyter-client <7.0
    tornado >= 6.1
    # tornado 6.1 is required on Python 3.8 on Windows to make Python and Julia Consoles work.
    qtconsole >=5.1
    sqlalchemy >=1.3
    spinedb_api >=0.24.0
    spine_engine >=0.19.0
    numpy >=1.20.2
    matplotlib >=3.0, !=3.2.1, !=3.3.1
    # matplotlib == 3.2.1 is broken; importing e.g. networkx after matplotlib.backends.backend_qt5agg backtraces
    # also, matplotlib == 3.2.1 requires shiboken2 but does not list it in its dependencies
    # matplotlib 3.3.1 fails to install properly from pip, see
    # https://stackoverflow.com/questions/24251102/from-matplotlib-import-ft2font-importerror-dll-load-failed-the-specified-pro/24251889#24251889
    scipy >=1.7.1
    networkx >=2.6
    pandas >=1.3.2
    pygments >=2.8
    jill >=0.9.2
    pyzmq >=21.0
    spine-items >= 0.17.0
include_package_data = True
python_requires = >=3.7.1, <3.11, !=3.8.0

[options.entry_points]
console_scripts =
    spinetoolbox=spinetoolbox.main:main
    spine-db-editor=spinetoolbox.spine_db_editor.main:main

[options.packages.find]
exclude =
    tests*
    execution_tests*

[coverage:run]
source = spinetoolbox
branch = True

[coverage:report]
ignore_errors = True
